--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -77,6 +77,13 @@
             <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
