--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com</groupId>
-    <artifactId>EventTracking</artifactId>
+    <artifactId>EventTrackingAPI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>EventTracking</name>
-    <description>EventTracking</description>
+    <description>EventTrackingAPI</description>
     <properties>
         <java.version>17</java.version>
     </properties>
