--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
       hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_structured_entities: false
   datasource:
-    url: jdbc:postgresql://localhost:5432/Events
-    username: postgres
+    url: jdbc:postgresql://localhost:5432/events
+    username: cnbrkaydemir
     password: password
