Integrate redis for caching.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,3 +26,8 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: cnbrkaydemir
       POSTGRES_DB: events
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
