Implement JWT based authentication/authorization through oauth2 resource server.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER cnbrkaydemir
 
 COPY target/EventTrackingAPI-0.0.1-SNAPSHOT.jar EventTrackingAPI-0.0.1-SNAPSHOT.jar
 
-ENTRYPOINT ["java", "-jar", "EventTrackingAPI-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=docker","EventTrackingAPI-0.0.1-SNAPSHOT.jar"]
