--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
