--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -14,9 +14,9 @@ spring:
       hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_structured_entities: false
   datasource:
-    url: jdbc:postgresql://db:5432/events
-    username: cnbrkaydemir
-    password: password
+    url: ${DB_URL_DOCKER}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
 
 rsa:
   private-key: classpath:certs/private.pem
