--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
       hibernate.cache.use_structured_entities: false
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/events
-    username: cnbrkaydemir
-    password: password
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
 
 
 rsa:
